<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/programming"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/programming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/pun"/>

    <CheckBox
        android:id="@+id/pun"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/pun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/programming"
        app:layout_constraintBottom_toTopOf="@id/christmas"/>

    <CheckBox
        android:id="@+id/christmas"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/christmas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pun"
        app:layout_constraintBottom_toTopOf="@id/spooky"/>

    <CheckBox
        android:id="@+id/spooky"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/spooky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/christmas"
        app:layout_constraintBottom_toTopOf="@id/misc"/>

    <CheckBox
        android:id="@+id/misc"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/miscellaneous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spooky"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"/>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>